# soci-wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  run.sh
examples/simple_db/: CMakeLists.txt  main.cpp
include/: soci-wrapper.hpp
include/soci-wrapper/: configuration.hpp  ddl.hpp  detail.hpp  dml.hpp  dql.hpp  lockable.hpp  meta_data.hpp  orm.hpp  placeholders.hpp  query.hpp  session.hpp  sessions_pool.hpp  terminals.hpp  types_convertor.hpp  types_traits.hpp
include/soci-wrapper/base/: config.hpp  lockable.hpp  meta_data.hpp  terminals.hpp  utility.hpp
tests/: CMakeLists.txt  ddl.cpp  dql.cpp  pool.cpp  types.cpp
